Merge scripts generating rust-hyper and rust-reqwest samples.